--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RLA Enterprises</title>
 
+    <meta name="description" content="RLA Enterprises is a gardening company that offers design, engineering, construction and project management services to create unique and sustainable green spaces. Our passion for nature and landscaping leads us to always seek excellence and customer satisfaction.">
+    <meta property="og:title" content="RLA Enterprises">
+    <meta property="og:description" content="RLA Enterprises is a gardening company that offers design, engineering, construction and project management services to create unique and sustainable green spaces. Our passion for nature and landscaping leads us to always seek excellence and customer satisfaction.">
+    <meta property="og:image" content="./css/images/rla-logo.png">
+    <meta property="og:url" content="https://rla-enterprises.com/">
+
     <link rel="stylesheet" href="./css/fonts.css">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="stylesheet" href="./css/extra.css">
