--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RLA Enterprises</title>
+    <title>RLA Enterprise</title>
 
-    <meta name="description" content="RLA Enterprises is a gardening company that offers design, engineering, construction and project management services to create unique and sustainable green spaces. Our passion for nature and landscaping leads us to always seek excellence and customer satisfaction.">
-    <meta property="og:title" content="RLA Enterprises">
-    <meta property="og:description" content="RLA Enterprises is a gardening company that offers design, engineering, construction and project management services to create unique and sustainable green spaces. Our passion for nature and landscaping leads us to always seek excellence and customer satisfaction.">
+    <meta name="description" content="RLA Enterprise is a gardening company that offers design, engineering, construction and project management services to create unique and sustainable green spaces. Our passion for nature and landscaping leads us to always seek excellence and customer satisfaction.">
+    <meta property="og:title" content="RLA Enterprise">
+    <meta property="og:description" content="RLA Enterprise is a gardening company that offers design, engineering, construction and project management services to create unique and sustainable green spaces. Our passion for nature and landscaping leads us to always seek excellence and customer satisfaction.">
     <meta property="og:image" content="./css/images/rla-logo.png">
     <meta property="og:url" content="https://rla-enterprises.com/">
 
@@ -101,12 +101,12 @@
         <section id="about" class="relative px-4 py-16 sm:px-8 lg:px-16 xl:px-40 2xl:px-64 lg:py-32">
             <div class="flex flex-col lg:flex-row lg:-mx-20">
                 <div class="w-full lg:w-1/2 lg:px-8">
-                    <h2 class="text-3xl serithai font-bold mt-4" data-aos="zoom-in">Welcome to <span class="text-primary">RLA Enterprises</span></h2>
+                    <h2 class="text-3xl serithai font-bold mt-4" data-aos="zoom-in">Welcome to <span class="text-primary">RLA Enterprise</span></h2>
                     <p class="mt-2 dm-sans lg:mt-4" data-aos="fade-right">
-                        <span class="text-primary font-semibold">RLA Enterprises</span> is a gardening company that offers design, engineering, construction and project management services to create unique and sustainable green spaces. Our passion for nature and landscaping leads us to always seek excellence and customer satisfaction.
+                        <span class="text-primary font-semibold">RLA Enterprise</span> is a gardening company that offers design, engineering, construction and project management services to create unique and sustainable green spaces. Our passion for nature and landscaping leads us to always seek excellence and customer satisfaction.
                     </p>
                     <p class="mt-2 dm-sans lg:mt-10" data-aos="fade-right">
-                        If you are looking for a gardening company that offers you an integral, personalized and quality service, <span class="text-primary font-semibold">RLA Enterprises</span> is your best option. These are some of the reasons why you should choose us:
+                        If you are looking for a gardening company that offers you an integral, personalized and quality service, <span class="text-primary font-semibold">RLA Enterprise</span> is your best option. These are some of the reasons why you should choose us:
                     </p>
                     <ul class="list-disc mt-3 dm-sans-italic text-sm ml-6" >
                         <li data-aos="fade-right">We have more than 10 years of experience in the gardening sector, which endorses us as a serious, professional and reliable company.</li>
@@ -340,7 +340,7 @@
                                     <svg xmlns="http://www.w3.org/2000/svg" class="w-7 mx-3" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path fill="#fff" d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"/></svg>
                                 </a>
                             </div>
-                            <h1 class="mt-8 uppercase dm-sans text-white text-left text-sm">Copyright © 2023 RLA Enterprises LLC</h1>
+                            <h1 class="mt-8 uppercase dm-sans text-white text-left text-sm">Copyright © 2023 RLA Enterprise LLC</h1>
                             <h1 class="uppercase dm-sans text-white text-left text-xs">Powered by Concepto Digital</h1>
                         </div>
                     </div>
@@ -384,7 +384,7 @@
                                     <svg xmlns="http://www.w3.org/2000/svg" class="w-7 mx-3" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path fill="#fff" d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z"/></svg>
                                 </a>
                             </div>
-                            <h1 class="mt-8 uppercase dm-sans text-white text-center text-sm">Copyright © 2023 RLA Enterprises LLC</h1>
+                            <h1 class="mt-8 uppercase dm-sans text-white text-center text-sm">Copyright © 2023 RLA Enterprise LLC</h1>
                             <h1 class="uppercase dm-sans text-white text-center text-xs">Powered by Concepto Digital</h1>
                         </div>
                     </div>
